--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "3.11.*"
 numpy = "^1.26.0"
-opencv-python = "^4.8.1.78"
 matplotlib = "^3.8.0"
 scikit-learn = "^1.3.1"
 scipy = "^1.11.3"
+opencv-contrib-python = "^3.4.2.17"
 
 
 [tool.poetry.group.dev.dependencies]
