--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,10 @@ repos:
       - id: trailing-whitespace
   - repo: local
     hooks:
+      - id: nbqa-isort
+        name: Run isort
+        entry: poetry run nbqa isort notebooks
+        language: system
       - id: nbqa-black
         name: Run black
         entry: poetry run nbqa black notebooks
